# KMP_GE

./: .gitignore  CMakeLists.txt  build.gradle.kts  gradle.properties  settings.gradle.kts  shader.frag
c/include/: README.md
c/include/glad/: gl.c
cinterop/: build.gradle.kts
cinterop/jni/: CMakeLists.txt  JNIImpls.cpp  io_github_epicvon2468_cinterop_jni_JNIImpls.h
cinterop/src/commonMain/kotlin/io/github/epicvon2468/cinterop/: Memory.kt  Pointed.kt  Pointer.kt
cinterop/src/commonTest/kotlin/io/github/epicvon2468/cinterop/tests/: PointerTests.kt
cinterop/src/jvmMain/java/io/github/epicvon2468/cinterop/jni/: JNIImpls.java
cinterop/src/jvmMain/kotlin/io/github/epicvon2468/cinterop/: Pointed.jvm.kt  Pointer.jvm.kt
cinterop/src/nativeMain/kotlin/io/github/epicvon2468/cinterop/: Pointed.native.kt  Pointer.native.kt
core/: build.gradle.kts
core/c/include/: README.md
core/c/include/glad/glad/: gl.h
core/c/include/kmp_ge/: kmp_ge.c  kmp_ge.h
core/src/commonMain/kotlin/io/github/epicvon2468/core/interop/: GL.kt  GLFW.kt  MultiplatformInterop.kt
core/src/commonTest/kotlin/io/github/epicvon2468/core/: CommonGLFWTests.kt  CommonWindowTest.kt
core/src/jvmMain/kotlin/io/github/epicvon2468/core/: main.kt
core/src/jvmMain/kotlin/io/github/epicvon2468/core/interop/: GL.jvm.kt  GLFW.jvm.kt  (+1 more)
core/src/nativeInterop/cinterop/: gl.def  glfw.def
core/src/nativeMain/kotlin/io/github/epicvon2468/core/: Shaders.kt  main.c  main.kt
gradle/: libs.versions.toml
src/commonTest/kotlin/io/github/epicvon2468/kmp_ge/core/: CommonGLFWTests.kt
(+73 files in other folders)
